# vigil

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  package-lock.json  package.json
.claude/: settings.local.json
.github/workflows/: docker.yml
client/: eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
client/src/: App.tsx  types.ts
client/src/api/: client.ts
client/src/components/: CertChainViewer.tsx  CheckHistoryTable.tsx  CveDetailModal.tsx  CveTargetCard.tsx  CveTargetForm.tsx  CvelistSyncPanel.tsx  DiffPanel.tsx  KevSyncPanel.tsx  NotifierForm.tsx  NvdSyncPanel.tsx  ProtectedRoute.tsx  ResponseTimeChart.tsx  ServerCard.tsx  ServerForm.tsx  SslCertPanel.tsx  SslTargetCard.tsx  SslTargetForm.tsx  StatusBadge.tsx  VulnrichmentSyncPanel.tsx
client/src/contexts/: AuthContext.tsx  ThemeContext.tsx
client/src/hooks/: useAuth.ts  useChecks.ts  useCveFindings.ts  useCveTargets.ts  useCvelistStatus.ts  useKevStatus.ts  (+6 more)
server/: .env.example  eslint.config.js  package-lock.json  package.json  tsconfig.json
server/src/: index.ts  types.ts
vigil/: Cargo.toml
vigil/src/: config.rs  error.rs  main.rs  startup.rs  state.rs  types.rs
vigil/src/api/: audit.rs  auth.rs  checks.rs  cve_findings.rs  cve_targets.rs  cvelist.rs  diffs.rs  kev.rs  mod.rs  notifications.rs  nvd.rs  servers.rs  ssl_checks.rs  ssl_targets.rs  users.rs  vulnrichment.rs
vigil/src/auth/: jwt.rs  middleware.rs  mod.rs  renewal.rs  seed.rs
vigil/src/crypto/: mod.rs
vigil/src/cve/: cvelist_importer.rs  cvelist_scheduler.rs  engine.rs  enrichment_alerter.rs  kev_importer.rs  kev_scheduler.rs  mod.rs  nvd_importer.rs  nvd_scheduler.rs  vulnrichment_importer.rs  vulnrichment_scheduler.rs
vigil/src/db/: mod.rs  schema.sql
vigil/src/monitor/: alerter.rs  checker.rs  differ.rs  engine.rs  hasher.rs  mod.rs  screenshotter.rs
vigil/src/notifiers/: discord.rs  mod.rs  pushover.rs  teams.rs
vigil/src/ssl/: alerter.rs  checker.rs  engine.rs  mod.rs
vigil/tests/: shapes.rs
(+61 files in other folders)
