[package]
name = "vigil"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "vigil"
path = "src/main.rs"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["macros"] }
axum-extra = { version = "0.9", features = ["cookie"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "fs", "set-header"] }
tokio = { version = "1", features = ["full"] }

# Database
rusqlite = { version = "0.31", features = ["bundled"] }

# HTTP client
reqwest = { version = "0.12", features = ["json", "gzip", "rustls-tls", "stream"], default-features = false }

# JSON
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Auth
jsonwebtoken = "9"
bcrypt = "0.15"

# Cookies
cookie = "0.18"

# Rate limiting
governor = { version = "0.6", features = ["std", "dashmap"] }

# Config
dotenvy = "0.15"

# Crypto (AES-256-GCM + HKDF for notification config encryption)
aes-gcm = "0.10"
hkdf = "0.12"
sha2 = "0.10"
rand = "0.8"
base64 = "0.22"
hex = "0.4"

# Diffing
similar = { version = "2", features = ["text"] }

# Regex (for content hash normalization)
regex = "1"
once_cell = "1"

# Datetime
chrono = { version = "0.4", features = ["serde"] }

# Unique IDs
uuid = { version = "1", features = ["v4"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1"
thiserror = "1"

# Async trait
async-trait = "0.1"

# Cancellation tokens (for monitor/SSL engines)
tokio-util = "0.7"

# TLS inspection (SSL engine — Phase 3)
tokio-rustls = "0.26"
rustls = { version = "0.23", features = ["ring"] }
x509-parser = "0.16"
webpki-roots = "0.26"

# Compression (for NVD feed gzip decompression — Phase 4)
flate2 = "1"

# Semver (for CVE version range matching — Phase 4)
semver = "1"

# Parallel iterators (for CVE list full import)
rayon = "1"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1

[profile.dev]
# Faster incremental builds in dev
opt-level = 0
